# tasks_support_system_ai

./: .dockerignore  .env.example  .gitignore  BASELINE.md  Dockerfile  EDA.md  README.md  checkpoints.md  compose.data.yaml  compose.yaml  dataset.md  justfile  pyproject.toml
.github/workflows/: code-quality.yaml  code-style.yaml  deploy.yaml  no-merges.yaml
data/: .gitignore  extra.dvc  nlp.dvc  ts.dvc
deployment/: deploy.sh
docker/: .env.example
docker/nginx/conf.d/: minio.conf
docs/: checkpoint6_results.md  checkpoints.md  pull_request_template.md
nginx/: minio.conf  support.conf
notebooks/: TS_EDA_2.ipynb  clustering_eda.ipynb  tickets_eda_clean.ipynb  ts-eda.ipynb  word2vec.ipynb
notebooks/NLP/: Baseline.ipynb  CatBoost.ipynb  Read_data.ipynb  RuBERT.ipynb  RuBERT_2.ipynb  RuBERT_2_with_augs.ipynb  XGBoost_Lightgbm.ipynb  clustering_eda.ipynb  dl_model.ipynb  tickets_eda_clean.ipynb  tickets_eda_clean_lvl2.ipynb  word2vec.ipynb
notebooks/TS/: DL_analysisy.ipynb  EDA.ipynb  baseline.ipynb  boosting_analysis.ipynb  hierarchy_analysis.ipynb  inference_pipeline.ipynb
notebooks/TS/extra/: baseline.ipynb  daily_eda.ipynb  daily_predict.ipynb  daily_predict_2.ipynb  linear_regression_baseline_WIP.ipynb  pipeline_WIP.ipynb  ts-eda-hourly.ipynb  ts-eda-telecom.ipynb  ts_checkpoint5.ipynb
notebooks/infra/: minio.ipynb
scripts/: anonimize_data.py  generate_data.py  prefetch_data.py  test_script.py
scripts/extra/: generate_data.py
service/frontend/: app.py
setup/: __init__.py  __main__.py  checks.py  config.py
tasks_support_system_ai/: __init__.py  main.py  readers.py  sync_data.py  utils.py
tasks_support_system_ai/api/endpoints/: health.py  nlp.py  ts.py
tasks_support_system_ai/api/models/: common.py  nlp.py  ts.py
tasks_support_system_ai/core/: config.py  exceptions.py  logger.py  logging.py  logging_config.py  logging_fastapi.py
tasks_support_system_ai/data/: inference_preprocesser.py  parse_data.py  reader.py  sync_data.py
tasks_support_system_ai/data/nlp/: reader.py
tasks_support_system_ai/service/backend/: main.py
tasks_support_system_ai/service/frontend/: app.py
tasks_support_system_ai/services/nlp/: model_service.py  predictor.py  preprocessor.py  train.py
tasks_support_system_ai/ts/: prediction.py
tasks_support_system_ai/utils/: nlp.py  utils.py
tasks_support_system_ai/web/: api_client.py  app.py
tests/: test_main.py  test_utils.py
(+25 files in other folders)
