[tool.poetry]
name = "tasks_support_system_ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
ollama = "^0.3.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
numpy = "<2.0"
statsmodels = "^0.14.4"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
darts = "^0.30.0"
prophet = "^1.1.6"
catboost = "^1.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
