[tool.poetry]
name = "tasks_support_system_ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
numpy = "<2.0"
statsmodels = "^0.14.4"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
prophet = "^1.1.6"
catboost = "^1.2.7"
streamlit = "^1.40.2"
watchdog = "^6.0.0"
fastapi = {extras = ["standard"], version = "^0.115.5"}
u8darts = {extras = ["notorch"], version = "^0.31.0"}
minio = "^7.2.12"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
minio-sync = "tasks_support_system_ai.data.sync_data:cli"

[tool.ruff]
extend-exclude = ['*.ipynb']
line-length = 100
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "SIM", "PL", "FAST", "PTH", "C4", "UP", "ASYNC", "C90"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = false

docstring-code-line-length = "dynamic"
